third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/local-datetime/no-leads-with-milli.stderr
TOML parse error at line 2, column 22
  |
2 | with-milli = 1987-07-5T17:45:00.12
  |                      ^
invalid date-time
